setting start time

--- a/client/elements/mjbe-timer/mjbe-timer.html
+++ b/client/elements/mjbe-timer/mjbe-timer.html
@@ -59,16 +59,13 @@
       properties: {
         time: {
           type: Number,
-          value: 0
         },
         seconds: {
           type: Number,
-          value: 0,
           notify: true
         },
         minutes: {
-          type: Boolean,
-          value: false,
+          type: Number,
           notify: true
         }
       },
