--- a/client/elements/mjbe-dashboard/mjbe-dashboard.html
+++ b/client/elements/mjbe-dashboard/mjbe-dashboard.html
@@ -230,15 +230,15 @@ Polymer({
   },
 
   updateMod: function() {
-    this.showtimer = this.showTimer;
-    this.showleaderboard = this.showLeaderboard;
     this.showtimer = this.$.showTimerBox.checked ? 'true' : 'false';
     this.showleaderboard = this.$.showLeaderboardBox.checked ? 'true' : 'false';
     this.showwhiteboard = this.$.showWhiteboardBox.checked ? 'true' : 'false';
+    console.log('updating polymer to ' + this.showtimer + ', ' + this.showwhiteboard + ', ' + this.showleaderboard);
     this.$.modDialog.close();
   },
 
   parseBool: function(bool) {
+    console.log('parsebool returning ' + bool === 'true');
     return bool === 'true';
   }
 });
