Added Several Layout Pieces

--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -54,3 +54,4 @@
 <link rel="import" href="mjbe-timer/mjbe-timer.html">
 <link rel="import" href="mjbe-leaderboard/mjbe-leaderboard.html">
 <link rel="import" href="auth-card/auth-card.html">
+<link rel="import" href="mjbe-profile/mjbe-profile.html">
