--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -1,11 +1,4 @@
-<paper-card heading="Profile" image="" elevation="1" animated-shadow="false">
-  <div class="card-content">
-   Profile: To fill in.
-  </div>
-  <div class="card-actions">
-    <paper-button raised ui-sref="main">Go back.</paper-button>
-  </div>
-</paper-card>
+<mjbe-profile></mjbe-profile>
 Requests:
 <div ng-click="accept()">{{requests[0].teacher}}</div>
 Teachers:
