--- a/client/elements/mjbe-dashboard/mjbe-dashboard.html
+++ b/client/elements/mjbe-dashboard/mjbe-dashboard.html
@@ -268,6 +268,7 @@ Polymer({
 
   newStudentMod: function() {
     console.log('new student mod');
+    console.log(this.individualMod);
   }
 });
 </script>
