Added Several Components to StudentDash

--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -33,6 +33,9 @@
 <link rel="import" href="../bower_components/paper-radio-group/paper-radio-group.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
+<link rel="import" href="../bower_components/google-chart/google-chart.html">
+<link rel="import" href="../bower_components/paper-date-picker/paper-date-picker.html">
+
 
 <link rel="import" href="../bower_components/neon-animation/neon-animatable-behavior.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animation-runner-behavior.html">
@@ -55,3 +58,5 @@
 <link rel="import" href="mjbe-leaderboard/mjbe-leaderboard.html">
 <link rel="import" href="auth-card/auth-card.html">
 <link rel="import" href="mjbe-profile/mjbe-profile.html">
+<link rel="import" href="mjbe-updating-grid/mjbe-updating-grid.html">
+
