--- a/client/elements/mjbe-profile/mjbe-profile.html
+++ b/client/elements/mjbe-profile/mjbe-profile.html
@@ -15,6 +15,9 @@
         width: 500px;
         min-width: 300px;
       }
+      .short-box {
+        height: 100px;
+      }
       .tall-box {
         height: 300px;
       }
@@ -45,7 +48,7 @@
     <!-- top bar only for pending teacher invitation -->
     <div class="tile layout horizontal">
       <paper-material elevation="1" class="flex invitation heightfix">
-          <h3>You got a class invitation from TeacherName!</h3>
+          <h2>You got a class invitation from TeacherName!</h2>
           <p>SubjectName</p>
           <paper-button raised><iron-icon icon="social:group-add"></iron-icon> Click here to join the class</paper-button>
       </paper-material>
@@ -76,7 +79,7 @@
       <!-- second column -->
       <div class="box tile flex layout vertical">
 
-        <paper-material elevation="1" style="background-color: white">
+        <paper-material elevation="1" style="background-color: white" class="short-box" >
           <h3>Latest Badge</h3>
         </paper-material>
 
@@ -89,7 +92,7 @@
       <!-- third column -->
       <div class="box tile layout vertical flex">
 
-        <paper-material elevation="1" style="background-color: white">
+        <paper-material elevation="1" style="background-color: white" class="short-box" >
           <h3>Latest Badge</h3>
         </paper-material>
 
@@ -97,7 +100,11 @@
           <h3>Another box</h3>
           <p>Member since April 1, 2017</p>
         </paper-material>
-
+        
+        <paper-material elevation="1" style="background-color: #5AC8FA" class="square-box">
+          <h3>Date and Time</h3>
+          <p>Member since April 1, 2017</p>
+        </paper-material>
       </div>
     </div>
 <!--     <div class="bar horizontal layout around-justified wrap tile">
