conditional show request working

--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -1,4 +1,4 @@
-<mjbe-profile></mjbe-profile>
+<mjbe-profile loadrequest="{{request}}" accepted="{{accepted}}" bind-polymer></mjbe-profile>
 Requests:
 <div ng-click="accept()">{{requests[0].teacher}}</div>
 Teachers:
