--- a/client/elements/mjbe-profile/mjbe-profile.html
+++ b/client/elements/mjbe-profile/mjbe-profile.html
@@ -46,6 +46,7 @@
     </style>
     
     <!-- top bar only for pending teacher invitation -->
+    <template is="dom-if" if="{{request}}">
     <div class="tile layout horizontal">
       <paper-material elevation="1" class="flex invitation heightfix">
           <h2>You got a class invitation from TeacherName!</h2>
@@ -53,6 +54,7 @@
           <paper-button raised><iron-icon icon="social:group-add"></iron-icon> Click here to join the class</paper-button>
       </paper-material>
     </div>
+    </template>
 
     <!-- whole grid -->
     <div class="bar horizontal layout around-justified wrap tile">
@@ -138,6 +140,13 @@
         //   type: String,
         //   notify: true
         // },
+        loadrequest: {
+          notify: true
+        },
+
+        request: {
+          computed: 'parse(loadrequest)'
+        },
 
         animationConfig: {
           type: Object,
@@ -171,6 +180,12 @@
           // this.playAnimation('toolbar');
           this.playAnimation('entry');
         });
+      },
+
+      parse: function(loadrequest) {
+        try {
+          return JSON.parse(loadrequest);
+        } catch (e) {}
       }
     });
   </script>
