--- a/client/elements/auth-card/auth-card.html
+++ b/client/elements/auth-card/auth-card.html
@@ -81,7 +81,8 @@
           type: String
         },
         name: {
-          type: String
+          type: String,
+          notify: true
         },
         useremail: {
           type: String,
