--- a/client/elements/mjbe-profile/mjbe-profile.html
+++ b/client/elements/mjbe-profile/mjbe-profile.html
@@ -193,7 +193,8 @@
       },
 
       acceptRequest: function() {
-        this.accepted = true;
+        console.log('accepting in polymer');
+        this.accepted = 'true';
       }
     });
   </script>
