--- a/client/elements/auth-card/auth-card.html
+++ b/client/elements/auth-card/auth-card.html
@@ -147,6 +147,8 @@
           this.$.errortoast.show();
         } else {
           this.usertype = this.$.radio.selected;
+          console.log('name in polymer');
+          console.log(this.name);
           this.signup = 'true';
           if (this.errormessage !== '' && this.errormessage !== '{{vm.errormessage}}') {
             this.$.errortoast.show();
