displaying name and date

--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -1,6 +1,6 @@
-<mjbe-profile loadrequest="{{request}}" accepted="{{accepted}}" bind-polymer></mjbe-profile>
-Requests:
+<mjbe-profile loadrequest="{{request}}" accepted="{{accepted}}" name="{{name}}" joined="{{joined}}" bind-polymer></mjbe-profile>
+<!--Requests:
 <div ng-click="accept()">{{requests[0].teacher}}</div>
 Teachers:
-<div>{{teacher}}</div>
+<div>{{teacher}}</div>-->
 
