--- a/client/elements/mjbe-profile/mjbe-profile.html
+++ b/client/elements/mjbe-profile/mjbe-profile.html
@@ -63,13 +63,13 @@
       <div class="box tile flex layout vertical">
 
         <paper-material elevation="4" class="namebox">
-          <h2>Eric Hollenberry</h2>
-          <p>Member since April 1, 2017</p>
+          <h2>{{name}}</h2>
+          <p>Member since {{joined}}</p>
         </paper-material>
 
         <paper-material elevation="1" style="background-color: #5AC8FA" class="square-box">
           <h3>Date and Time</h3>
-          <p>Member since April 1, 2017</p>
+          <p>Member since {{joined}}</p>
         </paper-material>
 
         <paper-material elevation="1" style="background-color: #FF2D55" class="tall-box">
@@ -149,6 +149,14 @@
         },
 
         accepted: {
+          notify: true
+        },
+
+        name: {
+          notify: true
+        },
+
+        joined: {
           notify: true
         },
 
