--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,2 +1,2 @@
-<pie-status userselection="{{main.userselection}}" loadskills="{{main.skillsData}}" loadstudentskills="{{main.studentSkillsData}}" loadtree="{{main.treeData}}" event-namespace="main" bind-polymer></pie-status>
-
+<pie-status userselection="{{main.userselection}}" loadskills="{{main.skillsData}}" loadtree="{{main.treeData}}" loadstudentskills="{{main.studentSkillsData}}" event-namespace="main" bind-polymer></pie-status>
+<!-- <mjbe-student-home userselection="{{main.userselection}}" loadskills="{{main.skillsData}}" loadtree="{{main.treeData}}" loadstudentskills="{{main.studentSkillsData}}" event-namespace="main" bind-polymer></mjbe-student-home> -->
