--- a/client/elements/mjbe-dashboard/mjbe-dashboard.html
+++ b/client/elements/mjbe-dashboard/mjbe-dashboard.html
@@ -56,7 +56,7 @@
     </paper-tabs>
     <!--dashboard content-->
     <div class="tile d3">
-      <mjbe-teacher-pie skills="{{skills}}" loadstudents="{{students}}"></mjbe-teacher-pie>
+      <span>Cool D3 graph here</span>
     </div>
     <div class="tile list">
       <mjbe-collapse-list activeclass="{{selectedclass}}" email="{{email}}" invitecount="{{invitecount}}" data="{{students}}"></mjbe-collapse-list>
@@ -168,10 +168,6 @@ Polymer({
 
     showWhiteboard: {
       computed: 'parseBool(showwhiteboard)'
-    },
-
-    skills: {
-      notify: true
     },
 
     animationConfig: {
