fix back button

--- a/client/elements/problems-addition/problems-addition.html
+++ b/client/elements/problems-addition/problems-addition.html
@@ -76,7 +76,7 @@
     <paper-dialog id="dialog" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       Congratulations! You passed this module.
       <paper-button class="backbutton" ui-sref="main">
-        <paper-icon-button mini icon="arrow-back" ui-sref="main"></paper-icon-button> Go back to Main Page
+        <paper-icon-button mini icon="arrow-back" ui-sref="home"></paper-icon-button> Go back to Main Page
       </paper-button>
       <paper-button dialog-confirm class="practice">Keep Practicing</paper-button>
     </paper-dialog>
