--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -1,4 +1,4 @@
-<mjbe-profile loadrequest="{{request}}" accepted="{{accepted}}" name="{{name}}" joined="{{joined}}" userselection="{{userselection}}" loadskills="{{skillsData}}"  loadstudentskills="{{studentSkillsData}}" bind-polymer></mjbe-profile>
+<mjbe-profile loadrequest="{{request}}" accepted="{{accepted}}" name="{{name}}" joined="{{joined}}" userselection="{{userselection}}" loadskills="{{skillsData}}"  loadstudentskills="{{studentSkillsData}}" points="{{points}}" bind-polymer></mjbe-profile>
 <!--Requests:
 <div ng-click="accept()">{{requests[0].teacher}}</div>
 Teachers:
